--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@cc-orch/adapters": "^1.0.0",
         "@cc-orch/core": "*",
+        "@cc-orch/database": "^1.0.0",
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.6",
         "axios": "^1.13.2",
