Add initial CI workflow, new CLI package, and core smoke test, while updating Docker Compose command syntax.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,6 +123,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Validate Docker Compose
-        run: docker-compose config
+        run: docker compose config
       - name: Build Images
-        run: docker-compose build
+        run: docker compose build
