--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "start:api": "node dist/packages/api/src/server.js",
     "start:analytics": "cd packages/analytics-engine && uvicorn main:app --reload --port 8999",
     "start:monitor": "cd packages/resource-monitor && go run main.go",
-    "docker:build": "docker-compose build",
-    "docker:up": "docker-compose up -d",
-    "docker:down": "docker-compose down",
-    "docker:logs": "docker-compose logs -f",
+    "docker:build": "docker compose build",
+    "docker:up": "docker compose up -d",
+    "docker:down": "docker compose down",
+    "docker:logs": "docker compose logs -f",
     "example:basic": "ts-node examples/basic.ts",
     "example:failover": "ts-node examples/advanced-failover.ts"
   },
