--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,21 +1,28 @@
 {
-    "name": "@cc-orch/core",
+    "name": "@cross-cloud/core",
     "version": "1.0.0",
-    "description": "The logic engine for Cross-Cloud Orchestrator. Import this to build custom serverless failover backends.",
-    "keywords": [
-        "orchestrator",
-        "serverless",
-        "failover",
-        "cross-cloud",
-        "aws",
-        "gcp"
-    ],
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
-        "build": "tsc"
+        "build": "tsc",
+        "test": "jest"
     },
-    "publishConfig": {
-        "access": "public"
+    "dependencies": {
+        "@opentelemetry/api": "^1.9.0",
+        "@opentelemetry/resources": "^2.2.0",
+        "@opentelemetry/sdk-trace-base": "^2.2.0",
+        "@opentelemetry/sdk-trace-node": "^2.2.0",
+        "@opentelemetry/semantic-conventions": "^1.38.0",
+        "node-fetch": "^3.3.2",
+        "sqlite3": "^5.1.7",
+        "uuid": "^9.0.0"
+    },
+    "devDependencies": {
+        "@types/jest": "^29.5.14",
+        "@types/sqlite3": "^3.1.11",
+        "@types/uuid": "^9.0.0",
+        "jest": "^29.7.0",
+        "ts-jest": "^29.4.6",
+        "typescript": "^5.0.0"
     }
 }
