--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@cross-cloud/core",
+    "name": "@cc-orch/core",
     "version": "1.0.0",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
