--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "scripts": {
     "build": "tsc -b",
+    "clean": "tsc -b --clean",
     "test": "jest",
     "lint": "eslint . --ext .ts",
     "start:api": "node packages/api/dist/server.js",
@@ -31,6 +32,7 @@
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "prettier": "^3.1.0",
+    "rimraf": "^6.1.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
