--- a/package.json
+++ b/package.json
@@ -1,40 +1,19 @@
 {
   "name": "cross-cloud-orchestrator-root",
-  "version": "1.0.0",
-  "description": "A resilient Meta-Orchestrator for cross-cloud serverless workflows.",
-  "author": "Kshitijpalsinghtomar",
-  "license": "MIT",
   "private": true,
   "workspaces": [
     "packages/*",
-    "packages/adapters/*"
+    "examples/*"
   ],
   "scripts": {
-    "build": "tsc -b",
-    "clean": "tsc -b --clean",
-    "test": "jest",
-    "lint": "eslint . --ext .ts",
+    "build": "npm run build --workspaces",
+    "test": "npm run test --workspaces",
     "start:api": "node packages/api/dist/server.js",
-    "start:analytics": "cd packages/analytics-engine && uvicorn main:app --reload --port 8999",
-    "start:monitor": "cd packages/resource-monitor && go run main.go",
-    "docker:build": "docker compose build",
-    "docker:up": "docker compose up -d",
-    "docker:down": "docker compose down",
-    "docker:logs": "docker compose logs -f",
-    "example:basic": "ts-node examples/basic.ts",
-    "example:failover": "ts-node examples/advanced-failover.ts"
+    "dev": "npm run dev --workspaces",
+    "dev:api": "npm start --workspace=@cc-orch/api",
+    "dev:dashboard": "npm run dev --workspace=@cc-orch/dashboard"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.10",
-    "@types/node": "^20.10.0",
-    "@typescript-eslint/eslint-plugin": "^6.13.0",
-    "@typescript-eslint/parser": "^6.13.0",
-    "eslint": "^8.56.0",
-    "jest": "^29.7.0",
-    "prettier": "^3.1.0",
-    "rimraf": "^6.1.2",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
