--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -14,11 +14,15 @@
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "d3-scale": "^4.0.2",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
+    "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.11.0",
+    "react-simple-maps": "^3.0.0",
     "reactflow": "^11.11.4",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18"
